Added wallet type selector and detect it on address form submit

--- a/dapp/views/bip32.html
+++ b/dapp/views/bip32.html
@@ -6,3 +6,10 @@
     <p class="text-danger small"></p>
   </div>
 </div>
+<div class="form-group">
+  <label for="select-hardware-wallet-<%= number %>">Select Hardware Wallet:</label>
+  <select class="form-control bootstrap-select signer-hardware-wallet" id="select-hardware-wallet-<%= number %>">
+    <option>Trezor</option>
+    <option>Ledger</option>
+  </select>
+</div>
