spending with ledger successful

--- a/dapp/views/signature_data.html
+++ b/dapp/views/signature_data.html
@@ -5,6 +5,9 @@
   <dd class="col-10"><code class="signature-bip32-path"></code></dd>
 <% } %>
 
+  <dt class="col-2">Wallet Type</dt>
+  <dd class="col-10"><code class="wallet_type"></code></dd>
+
   <dt class="col-2">Signature</dt>
   <dd class="col-10"><code class="signature-full"></code></dd>
 
