--- a/dapp/views/signer.html
+++ b/dapp/views/signer.html
@@ -27,7 +27,9 @@
 	  Export Address
 	</button>
 	<p class="text-danger card-text trezor-errors"></p>
-	<p class="text-danger card-text ledger-warning"></p>	
+	<p class="text-danger card-text ledger-warning-http"></p>	
+	<p class="text-danger card-text ledger-warning"></p>
+	<p class="text-warning card-text ledger-tips"></p>		
       </form>
 
       <hr />
