--- a/dapp/views/layout.html
+++ b/dapp/views/layout.html
@@ -65,6 +65,6 @@
     <script type="text/javascript">
       window.TREZOR_POPUP_ORIGIN = "https://connect.trezor.io";
     </script>
-    <script type="text/javascript" src="https://connect.trezor.io/4/connect.js"></script>
+    <script type="text/javascript" src="https://connect.trezor.io/5/trezor-connect.js"></script>
   </body>
 </html>
