--- a/dapp/views/signature_data.html
+++ b/dapp/views/signature_data.html
@@ -6,7 +6,7 @@
 <% } %>
 
   <dt class="col-2">Wallet Type</dt>
-  <dd class="col-10"><code class="wallet_type"></code></dd>
+  <dd class="col-10"><code class="wallet-type"></code></dd>
 
   <dt class="col-2">Signature</dt>
   <dd class="col-10"><code class="signature-full"></code></dd>
@@ -21,3 +21,5 @@
   <dd class="col-10"><code class="signature-v"></code></dd>
   
 </dl>
+
+<p class="card-text text-danger signature-errors"></p>
