--- a/dapp/views/connection.html
+++ b/dapp/views/connection.html
@@ -26,6 +26,15 @@
 	<small id="ethereum-account-help" class="form-text text-muted">This account has no rights on the vault, it is only used to pay for gas.</small>
 	<small id="card-text small" class="form-text text-muted" hidden> Node: <code id="ethereum-node"></code></small>
 	<small id="card-text small" class="form-text text-muted" hidden> Network: <code id="ethereum-network"></code></small> 	
+
+	<p><small>Approximate Gas Costs:
+	  <ul>
+	    <li>Contract Creation: 1170000</li>
+	    <li>Deposit ETH: 22512</li>
+	    <li>Withdraw ETH: 95000</li>
+	  </ul>
+	</small></p>
+
       </div>
     </form>
 
